responsive nav & redesign

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -5,3 +5,11 @@ body {
     overflow-x: hidden;
 }
 
+li.nav-icon:hover a span i{
+    color: white;
+}
+
+.logo {
+    width: 100px;
+    height: 50px;
+}
