--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,4 +5,12 @@ body {
     overflow-x: hidden;
 }
 
+li.nav-icon:hover a span i{
+    color: white;
+}
+
+.logo {
+    width: 100px;
+    height: 50px;
+}
 
